--- a/src/app/modules/benefit/pages/create-benefit/create-benefit.component.html
+++ b/src/app/modules/benefit/pages/create-benefit/create-benefit.component.html
@@ -131,20 +131,20 @@
         <div class="col-sm-3">
           <span style="font-weight: bold;">Plan Name</span>
           <p style="margin-top: 0.3rem; margin-bottom: 0.2rem;">
-            <span> {{plans?.name}}</span>
+            <span> {{AddVendorPlan?.name}}</span>
           </p>
         </div>
         <div class="col-sm-3">
           <span style="font-weight: bold;">Description</span>
           <p style="margin-top: 0.3rem; margin-bottom: 0.2rem;">
-            <span>{{plans?.description}}</span>
+            <span>{{AddVendorPlan?.description}}</span>
           </p>
         </div>
 
         <div class="col-sm-3">
           <span style="font-weight: bold;">Policy Number</span>
           <p style="margin-top: 0.3rem; margin-bottom: 0.2rem;">
-            <span>{{plans?.refNumber}}</span>
+            <span>{{AddVendorPlan?.refNumber}}</span>
           </p>
         </div>
 
